--- a/src/abridge/CMakeLists.txt
+++ b/src/abridge/CMakeLists.txt
@@ -27,3 +27,8 @@ target_link_libraries(
   ${catkin_LIBRARIES}
 )
 
+install(TARGETS abridge
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
